[BookNote] - Add icons to reading status - Reset Time - Modify title click to go to PostDetailPage - Make sure the recently revised post comes to the front.
[CreatePost]
- Add icon to save toast message
- If the user has not entered the number of pages, register a memo and not see it
- Troubleshooting page number truncation
- Troubleshooting each memo being saved and corrected at the same time
    - There is no problem when writing for the first time, but it is modified/deleted at the same time after editing
- If you don't enter the information, you won't save it
- Congratulations on your complete reading. Add icon to modal
- Troubleshooting a One-Time Saved Problem
- Troubleshooting deleting notes
- Save a book after specifying the day it is closed
- If you press the OK button in the back modal, save it, go to the Book Note, and cancel the button, go back

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -35,3 +35,7 @@
 .title-input::placeholder {
   color: #fff;  /* 흰색 */
 }
+
+.post-title:hover {
+  text-decoration: underline;
+}
